--- a/src/assets/styles/page.scss
+++ b/src/assets/styles/page.scss
@@ -1,5 +1,9 @@
-body {
+/*body {
   background: #121212;
+}*/
+
+.v-sheet.v-card {
+  background-color: var(--v-panel-base);
 }
 
 #page-container {
